--- a/Projeto/src/app/views/quiz_edit_form.ejs
+++ b/Projeto/src/app/views/quiz_edit_form.ejs
@@ -47,13 +47,9 @@
         <input id="quiz_key" name="quiz_key" type="hidden" value= <%= quiz_key %> >
         <input id="name" name="name"  style="width:50%; margin: 5px" required autofocus type="text" value= '<%= user_quizzes[quiz_key].name %>' ></input><br>
         <textarea id="theme" name="theme" style="width:50%; margin: 2px" required ><%= user_quizzes[quiz_key].theme %></textarea><br>
-        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
-      </form>
-    </div>
-
-    <div class="left"  style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0px;">Questions</h3>
-      <ul>
+        <div style="text-align: left;">
+          <h4 style="margin: 0px;margin-top: 10px;">Questions</h4>
+      <ul style="margin: 0px;margin-left: 25px; padding: 0;">
         <li> 
           <Div>
             <a href= <%= "/question_register_form?quiz_key=" + quiz_key %>> New... </a>
@@ -63,14 +59,14 @@
           <% for (const question_key in user_quizzes[quiz_key].questions) { %>
             <li> 
               <Div>
-                <p style="font-size:75%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[quiz_key].questions[question_key].description %>  <a href= <%= "/question_edit_form?quiz_key=" + quiz_key + "&question_key=" + question_key %> style="text-decoration: none;"> &#9998 </a></p>
+                <p style="margin-top: 5px ; margin-bottom: 0.0em ;"> <%= user_quizzes[quiz_key].questions[question_key].description %>  <a href= <%= "/question_edit_form?quiz_key=" + quiz_key + "&question_key=" + question_key %> style="text-decoration: none;"> &#9998 </a></p>
                 <ul style="list-style-type: none;margin: 0;padding: 0;">
                   <li>
-                    <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;">True Option:  <%= user_quizzes[quiz_key].questions[question_key].true_option %> </p>
+                    <p style="margin-top: 0.0em ; margin-bottom: 0.0em ;color:#134d11;">True Option:  <%= user_quizzes[quiz_key].questions[question_key].true_option %> </p>
                   </li>
                   <% for(var i=0; i < user_quizzes[quiz_key].questions[question_key].fake_options.length; i++) {%>
                     <li>
-                      <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em; color:#e10e1c;"> Fake Option<%= i + 1 %> :  <%= user_quizzes[quiz_key].questions[question_key].fake_options[i] %> </p>
+                      <p style="margin-top: 0.0em ; margin-bottom: 0.0em; color:#e10e1c;"> Fake Option<%= i + 1 %> :  <%= user_quizzes[quiz_key].questions[question_key].fake_options[i] %> </p>
                     </li>                    
                   <% } %>
                 </ul>                
@@ -79,6 +75,14 @@
           <% } %>
         <% } %>
       </ul>
+        </div>
+        
+        <button id="register_btn" type="submit" style="width:50%; margin: 5px">Register</button>
+      </form>
+    </div>
+
+    <div class="left"  style="background-color:#90b1df">
+      
     </div>
     
   </div>
