--- a/Projeto/src/app/views/quiz_register_form.ejs
+++ b/Projeto/src/app/views/quiz_register_form.ejs
@@ -20,7 +20,9 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0;"><a href="/quiz_view" style="text-decoration: none;">&#x1F519</a>  Quizzes</h3>
+      <h3 style="margin: 0px;padding: 0;">
+        <a href="/quiz_home" style="text-decoration: none;">&#x1F519</a>  Quizzes
+      </h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
@@ -28,16 +30,23 @@
           </Div>            
         </li>
         <% if (user_quizzes != undefined) { %>
-          <% for (const key in user_quizzes) { %>
-              <li> 
-                <Div>
-                  &#x1F50E <a href= <%= "/quiz_view?quiz_key=" + key %> style="text-decoration: none;"> <%= user_quizzes[key].name %> </a>
-                  <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[key].theme %> </p>
-                </Div>                
-              </li>
-          <% } %>
-        <% } %>
-      </ul>       
+    <% for (const key in user_quizzes) { %>
+    <li>
+      <Div>
+        &#x1F50E;
+        <a href=<%= "/quiz_view?quiz_key=" + key %> style="text-decoration: none;">
+          <%= user_quizzes[key].name %>
+        </a>
+        <a href=<%= "/quiz_edit_form?quiz_key=" + key %> style="text-decoration: none;">
+          &#9998;
+        </a>
+        <p style="font-size:50%;margin-top: 0px ; margin-bottom: 5px; margin-left: 25px;">
+          <%= user_quizzes[key].theme %> </p>
+      </Div>
+    </li>
+    <% } %>
+    <% } %>
+    </ul>   
     </div>
 
     
