--- a/Projeto/src/app/views/match_view.ejs
+++ b/Projeto/src/app/views/match_view.ejs
@@ -35,8 +35,8 @@
         <a href=<%= "/match_edit_form?match_key=" + key %> style="text-decoration: none;">
           &#9998;
         </a>
-        <a href=<%= "/match_launch?match_key=" + key%>
-          style="text-decoration: none;">&#x1F680;</a>
+        <!-- <a href=<%= "/match_launch?match_key=" + key%>
+          style="text-decoration: none;">&#x1F680;</a> -->
         <p style="font-size:50%;margin-top: 0px ; margin-bottom: 5px; margin-left: 25px;">
           <%= user_matches[key].theme %> </p>
       </Div>
