--- a/Projeto/src/app/views/home.ejs
+++ b/Projeto/src/app/views/home.ejs
@@ -59,8 +59,9 @@
         <h1 id="user_key" hidden></h1>
       <% } %>
 
-      <h3 style="margin: 0px;padding: 0;">Launched Matches</h3>
+      <h3 style="margin: 0px;padding: 0;">All Launched Matches</h3>
       <ul id="launched_matches_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul>       
+
     </div>
     
   </div>
