--- a/Projeto/src/app/views/round_register_form.ejs
+++ b/Projeto/src/app/views/round_register_form.ejs
@@ -49,8 +49,8 @@
 <body style="font-family:Verdana;color:#05252c;">
 
   <div style="background-color:#90b1df;padding:5px;text-align:center;">
-    <h2><%= title %></h2>
-    <p style="font-size:50%;"><%= wsa %>:<%= wsp %></p>
+    <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
+    <p style="font-size:50%;margin: 0px;padding: 0;"><%= wsa %>:<%= wsp %></p>
     <% if (fail_msg != undefined) { %>
     <p style="font-family:Verdana;color:#e10e1c;"> <%= fail_msg%> </p>
     <%}%>
@@ -59,8 +59,28 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
+    <h3 style="margin: 0px;padding: 0;"><a href=<%="/match_edit_form?match_key=" + match_key %> style="text-decoration: none;">&#x1F519;</a> Rounds</h3>
+      <ul>
+        <li>
+          <Div>
+            <a href=<%= "/round_register_form?match_key=" + match_key %>> New... </a>
+          </Div>
+        </li>
+        <% if (user_matches != undefined && match_key in user_matches) { %>
+        <% for (const round_key in user_matches[match_key].rounds) { %>
+        <li>
+          <Div>
+            <p style="font-size:75%;margin-top: 0.0em ; margin-bottom: 0.0em ;">
+              <%= user_matches[match_key].rounds[round_key].question.description %> <a
+                href=<%= "/round_edit_form?match_key=" + match_key + "&round_key=" + round_key %>
+                style="text-decoration: none;"> &#9998 </a></p>
+          </Div>
+        </li>
+        <% } %>
+        <% } %>
+      </ul>
       
-      <h3 style="margin: 0px;padding: 0;"><a href="/" style="text-decoration: none;">&#x1F519</a>  Matches</h3>
+      <!-- <h3 style="margin: 0px;padding: 0;"><a href="/" style="text-decoration: none;">&#x1F519</a>  Matches</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
@@ -78,16 +98,16 @@
     </li>
     <% } %>
     <% } %>
-    </ul>
+    </ul> -->
   </div>
 
   <div class="forms" style="background-color:#90b1df">
-    <h3>New Round</h3>
+    <h3 style="margin: 0px;padding: 0;">New Round</h3>
     <form id="round_register" action=/round_register method="get">
 
       <input id="match_key" name="match_key" type="hidden" value=<%= match_key %>>
 
-      <Div style="text-align: left;">
+      <Div style="text-align: left;margin-top: 10px;">
 
         <label for="quantity1">Wait time to shooting (seconds)</label>
         <input type="number" id="quantity1" name="quantity1" min="3" max="300"><br>
