--- a/Projeto/src/estudo/birds/views/sketch.ejs
+++ b/Projeto/src/estudo/birds/views/sketch.ejs
@@ -27,6 +27,8 @@
     <script src="/javascript/game/scene.js"></script>
     <script src="/javascript/game/scenes/def_1.js"></script>
     <script src="/javascript/game/scenes/def_2.js"></script>
+    <script src="/javascript/game/scenes/def_3.js"></script>
+    <script src="/javascript/game/scenes/def_4.js"></script>
     <script src="/javascript/game/game.js"></script>
     <script src="/javascript/sketch.js"></script>
     <h1 id="wssp" hidden><%= wssp %></h1>
