--- a/Projeto/src/app/views/challenge_edit_form.ejs
+++ b/Projeto/src/app/views/challenge_edit_form.ejs
@@ -55,6 +55,8 @@
 
           <label for="name"> Challenge name</label>
           <input id="name" name="name" placeholder="challenge name" style="margin: 2px" autofocus required type="text" value= '<%= user_challenges[challenge_key].name %>' ></input><br>
+          <label for="ws_address"> Challenge web server address</label>
+          <input id="ws_address" name="ws_address" placeholder="web server address" style="margin: 2px" autofocus required type="text" value= '<%= user_challenges[challenge_key].ws_address %>' ></input><br>
           
     
         </Div>
