--- a/Projeto/src/app/views/challenge_register_form.ejs
+++ b/Projeto/src/app/views/challenge_register_form.ejs
@@ -57,6 +57,8 @@
         <Div style="text-align: left;">
           <label for="name"> Challenge name</label>
           <input id="name" name="name" placeholder="challenge name" style="margin: 2px" autofocus required type="text"></input><br>
+          <label for="name"> Challenge web server address</label>
+          <input id="ws_address" name="ws_address" placeholder="web server address" style="margin: 2px" autofocus required type="text"></input><br>
         </Div>
       
       <button id="register_btn" type="submit" style="margin: 10px;">Register</button>
