--- a/Projeto/src/app/views/challenge_view.ejs
+++ b/Projeto/src/app/views/challenge_view.ejs
@@ -50,6 +50,10 @@
     <div style="text-align: center;padding-bottom: 10px ">
       <h3 style="margin: 0px;padding: 0px;"><%= "Challenge: " + user_challenges[challenge_key].name %></h3>
     </div>
+
+    <Div style="text-align: left;">
+      <p style="margin: 0px;;margin-bottom: 10px;"><%= "Web server Address: " + user_challenges[challenge_key].ws_address %></p>
+    </Div>
     
     <div>
       <h4 style="margin: 0px;">Rounds</h4>
