--- a/Projeto/src/estudo/birds/views/sketch.ejs
+++ b/Projeto/src/estudo/birds/views/sketch.ejs
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
 
-    <script src="https://unpkg.com/@free-side/audioworklet-polyfill/dist/audioworklet-polyfill.js"></script>
+    <!-- <script src="https://unpkg.com/@free-side/audioworklet-polyfill/dist/audioworklet-polyfill.js"></script> -->
+    <script src="/javascript/libraries/audioworklet-polyfill.js"></script>
     <script src="/javascript/libraries/p5.min.js"></script>
     <script src="/javascript/libraries/p5.sound.min.js"></script>
     <script src="/javascript/libraries/matter.js"></script>
@@ -20,20 +21,26 @@
     <script src="/javascript/game/drawbody.js"></script>
     <script src="/javascript/game/gbox.js"></script>
     <script src="/javascript/game/ball.js"></script>
-    <script src="/javascript/game/sbox.js"></script>
     <script src="/javascript/game/binding.js"></script>
     <script src="/javascript/game/sling.js"></script>
     <script src="/javascript/game/bird.js"></script>
     <script src="/javascript/game/scene.js"></script>
+    <script src="/javascript/game/challenge_scene.js"></script>
+    <script src="/javascript/game/game_def.js"></script>
+    <script src="/javascript/game/scenes/def_i.js"></script>
+    <script src="/javascript/game/scenes/def_c.js"></script>
     <script src="/javascript/game/scenes/def_1.js"></script>
     <script src="/javascript/game/scenes/def_2.js"></script>
     <script src="/javascript/game/scenes/def_3.js"></script>
     <script src="/javascript/game/scenes/def_4.js"></script>
+    <script src="/javascript/game/wschallenge.js"></script>
     <script src="/javascript/game/game.js"></script>
     <script src="/javascript/sketch.js"></script>
+
     <h1 id="wssp" hidden><%= wssp %></h1>
     <h1 id="wssa" hidden><%= wssa %></h1>
     <h1 id="ws_cluster" hidden><%= ws_cluster %></h1>
     <h1 id="ws_client" hidden><%= ws_client %></h1>
+
   </body>
 </html>
