--- a/Projeto/src/estudo/birds/views/sketch.ejs
+++ b/Projeto/src/estudo/birds/views/sketch.ejs
@@ -22,9 +22,11 @@
     
     <script src="/javascript/game/gbox.js"></script>
     <script src="/javascript/game/ball.js"></script>
+    <script src="/javascript/game/fire.js"></script>
     <script src="/javascript/game/binding.js"></script>
     <script src="/javascript/game/sling.js"></script>
     <script src="/javascript/game/bird.js"></script>
+    <script src="/javascript/game/actor.js"></script>
     <script src="/javascript/game/scene.js"></script>
     <script src="/javascript/game/challenge_scene.js"></script>
     <script src="/javascript/game/game_def.js"></script>
@@ -34,6 +36,7 @@
     <script src="/javascript/game/scenes/def_2.js"></script>
     <script src="/javascript/game/scenes/def_3.js"></script>
     <script src="/javascript/game/scenes/def_4.js"></script>
+    <script src="/javascript/game/scenes/def_5.js"></script>
     <script src="/javascript/game/wschallenge.js"></script>
     <script src="/javascript/game/game.js"></script>
     <script src="/javascript/sketch.js"></script>
