--- a/Projeto/src/estudo/birds/views/sketch.ejs
+++ b/Projeto/src/estudo/birds/views/sketch.ejs
@@ -13,6 +13,7 @@
     <script src="/javascript/libraries/p5.min.js"></script>
     <script src="/javascript/libraries/p5.sound.min.js"></script>
     <script src="/javascript/libraries/matter.js"></script>
+    <!-- <script src="/audio/applause.wav"></script> -->
   </head>
 
   <body>
